--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,51 @@
 fastapi==0.110.0
 uvicorn==0.29.0
 pydantic==2.7.1
-starlette<0.37.0
-sqlalchemy==2.0.29
+starlette==0.36.3
+SQLAlchemy==2.0.29
+aiohappyeyeballs==2.6.1
+aiohttp==3.8.1
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.10.0
+async-timeout==4.0.3
+attrs==25.3.0
+certifi==2025.8.3
+charset-normalizer==2.1.1
+click==8.1.8
+cohere==5.17.0
+colorama==0.4.6
+distro==1.9.0
+exceptiongroup==1.3.0
+fastavro==1.12.0
+filelock==3.19.1
+frozenlist==1.7.0
+fsspec==2025.9.0
+git-filter-repo==2.47.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.34.4
+idna==3.10
+jiter==0.10.0
+multidict==6.6.4
+numpy==2.0.2
+openai==0.28.0
+packaging==25.0
+propcache==0.3.2
+pydantic_core==2.18.2
+python-dotenv==1.1.1
+PyYAML==6.0.2
+regex==2025.9.1
+requests==2.32.5
+safetensors==0.6.2
+sniffio==1.3.1
+tokenizers==0.22.0
+tqdm==4.67.1
+transformers==4.56.1
+types-requests==2.32.4.20250809
+typing_extensions==4.15.0
+urllib3==2.5.0
+yarl==1.20.1
